--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f0f0f0; /* Light background for contrast */
+    background-color: #020403; /* Light background for contrast */
     color: #004d00; /* Dark green text */
     font-family: Arial, sans-serif;
 }
