--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: #020403; /* Dark background for contrast */
     color: #d6c3e0; /* Light purple text */
-    font-family: Arial, sans-serif;
+    font-family: Aptos, Aptos-Black;
 }
 
 h1, h2, h3 {
